[project]
name = "statewave-py"
version = "0.6.1"
description = "Official Python SDK for Statewave — Memory OS for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Statewave", email = "hello@statewave.ai"},
]
keywords = ["statewave", "ai", "agents", "memory", "context", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
]

[project.urls]
Homepage = "https://github.com/smaramwbc/statewave-py"
Documentation = "https://github.com/smaramwbc/statewave-py#readme"
Repository = "https://github.com/smaramwbc/statewave-py"
Issues = "https://github.com/smaramwbc/statewave-py/issues"
Changelog = "https://github.com/smaramwbc/statewave-py/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["statewave"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
